further taylor expansion for completed zeta at 1/2
Also added field "number-header" in display properties of collections that is shown in the header of the number tables.

--- a/data/Basic_constants/Integers/collection.yaml
+++ b/data/Basic_constants/Integers/collection.yaml
@@ -41,6 +41,10 @@ Data properties:
   type: Z
   complete: no
 
+Display properties:
+  number-header: >
+    $n$<sup>th</sup> integer
+
 Numbers:
   -10: -10
   -9: -9
