--- a/data/Physics/Fine-structure_constant/collection.yaml
+++ b/data/Physics/Fine-structure_constant/collection.yaml
@@ -61,6 +61,8 @@ Data properties:
     that are displayed in CITE{WikiMeas} in the years 2014-2020.
     Also note CITE{comment-non-constant}.
 
+Display properties:
+
 Numbers:
   alpha:
     param-latex: $\alpha$
