--- a/data/Special_values/Values_of_the_Gamma_function_at_rational_numbers/collection.yaml
+++ b/data/Special_values/Values_of_the_Gamma_function_at_rational_numbers/collection.yaml
@@ -54,5 +54,8 @@ Tags:
 Data properties:
   type: R
   complete: no
+  
+Display properties:
+  number-header: $\Gamma(s)$
 
 Numbers: INPUT{numbers.yaml}
