--- a/data/Special_values/Values_of_the_Riemann_zeta_function_at_rational_numbers/collection.yaml
+++ b/data/Special_values/Values_of_the_Riemann_zeta_function_at_rational_numbers/collection.yaml
@@ -57,5 +57,8 @@ Tags:
 Data properties:
   type: R
   complete: no
+  
+Display properties:
+  number-header: $\zeta(s)$
 
 Numbers: INPUT{numbers.yaml}
