changed data type to R

--- a/data/Series_expansions/Taylor_coefficients_of_completed_Riemann_zeta_function_at_1_over_2/collection.yaml
+++ b/data/Series_expansions/Taylor_coefficients_of_completed_Riemann_zeta_function_at_1_over_2/collection.yaml
@@ -1,7 +1,7 @@
 ID: INPUT{id.yaml}
 
 Title: >
-  Taylor coefficients of the completed Riemann zeta function at 1/2. 
+  Taylor coefficients of the completed Riemann zeta function at 1/2
 
 Definition: >
   The list contains the coefficients of the Taylor expansion
