added Feigenbaum constants

--- a/data/Elementary_geometry/Area_of_the_regular_n-gon/collection.yaml
+++ b/data/Elementary_geometry/Area_of_the_regular_n-gon/collection.yaml
@@ -12,9 +12,10 @@ Definition: >
   
 Parameters:
   expression:
-    title: Anchor
+    display: constraint
+    title: length that is constrained to be $1$
     type: Symbolic
-    show-in-parameter-list: no
+#    show-in-parameter-list: no
 
   n:
     type: Z
