added local extrema for Bessel J functions

--- a/data/Zeros/Zeros_of_Bessel_Y_functions/collection.yaml
+++ b/data/Zeros/Zeros_of_Bessel_Y_functions/collection.yaml
@@ -13,7 +13,7 @@ Parameters:
     type: C
   n:
     type: Z
-    constraints: $n \neq 1$
+    constraints: $n \geq 1$
    
 Comments:
   comment-choice-of-alpha: >
