added complete elliptic integral of the first kind K

--- a/data/Special_values/Values_of_the_prime_zeta_function_at_rational_numbers/collection.yaml
+++ b/data/Special_values/Values_of_the_prime_zeta_function_at_rational_numbers/collection.yaml
@@ -1,7 +1,7 @@
 ID: INPUT{id.yaml}
 
 Title: >
-  Values of the prime zeta function $P(s)$ at rational numbers
+  Values of the prime zeta function at rational numbers
 
 Definition: >
   For $\Re(s)>1$, one defines $P(s) = \sum_{p\in \text{primes}} p^{-s}$,
