--- a/data/Series_expansions/Keiper-Li_coefficients/collection.yaml
+++ b/data/Series_expansions/Keiper-Li_coefficients/collection.yaml
@@ -81,7 +81,7 @@ Links:
   WikiZeta:
     title: "Wikipedia: Riemann zeta function"
     url: https://en.wikipedia.org/wiki/Riemann_zeta_function
-  WikiZeta:
+  WikiLi:
     title: "Wikipedia: Li's criterion"
     url: https://en.wikipedia.org/wiki/Li%27s_criterion
 
