added formula for a_0

--- a/data/Series_expansions/Taylor_coefficients_of_completed_Riemann_zeta_function_at_2/collection.yaml
+++ b/data/Series_expansions/Taylor_coefficients_of_completed_Riemann_zeta_function_at_2/collection.yaml
@@ -29,6 +29,8 @@ Comments:
 Formulas:
   formula-functional-equation: >
     $\xi(s) = \xi(1-s)$ (functional equation).
+  formula-a0: >
+    $a_0 = \pi/6$.
 
 Programs: 
   program-sage:
