--- a/data/Series_expansions/Keiper-Li_coefficients/collection.yaml
+++ b/data/Series_expansions/Keiper-Li_coefficients/collection.yaml
@@ -62,7 +62,7 @@ References:
     bib: >
       Fredrik Johansson, "Rigorous high-precision computation of the Hurwitz zeta function and its derivatives",
       Numerical Algorithms. 69(2) (2015), 253-270. 
-    arxiv: 1309.2877
+    arXiv: 1309.2877
     doi: 10.1007/s11075-014-9893-1
       
   Kei92:
