--- a/data/Series_expansions/Keiper-Li_coefficients/collection.yaml
+++ b/data/Series_expansions/Keiper-Li_coefficients/collection.yaml
@@ -42,6 +42,21 @@ Formulas:
     
   formula-taylor-2: >
     $\frac{d}{dz}\log\xi(\frac{1}{1-z}) = \sum_{n=0}^\infty \lambda_{n+1}z^n$.
+    
+  formula-lambda-1: >
+    $\lambda_1 = 1 + \gamma/2 - \log 2 - \frac{1}{2}\log \pi$, 
+    where $\gamma$ is the Euler-Mascheroni constant.
+    
+  formula-lambda-2: >
+    $\lambda_2 = 1 +\gamma - \gamma^2 + \pi^2/8 - 2\log 2 - \log\pi - 2\gamma_1$, 
+    where $\gamma_1$ is the first Stieltjes constant.
+  
+  formula-lambda-3: >
+    $\lambda_3 = \frac{1}{2}\big(
+    2 + \frac{3}{4}\pi^2 - 6\log 2 - 3\log\pi - 12\gamma_1 + 
+    \gamma(3 + 2(\gamma - 3)\gamma + 6\gamma_1) + 3\gamma_2 - \frac{7}{4}\zeta(3)
+    \big)$.
+  
 
 Programs: 
 
@@ -51,7 +66,13 @@ References:
       Juan Arias de Reyna, "Asymptotics of Keiper-Li coefficients",
       Functiones et Approximatio Commentarii Mathematici. 45(1) (2011), 7-21.
     doi: 10.7169/facm/1317045228
-    
+
+  Cof04:
+    bib: >
+      M.W. Coffey, "Relations and positivity results for the 
+      derivatives of the Riemann ξ function",
+      J. Comput. Appl. Math. 166 (2004), 525-534.
+
   Con09:
     bib: >
       Donal F. Connon, "A recurrence relation for the Li/Keiper constants 
