--- a/data/Zeros/Algebraic_numbers/Algebraic_numbers_of_degree_2/collection.yaml
+++ b/data/Zeros/Algebraic_numbers/Algebraic_numbers_of_degree_2/collection.yaml
@@ -27,7 +27,7 @@ Comments:
   comment-n: >
     $n$ is the index of the root, where we order the roots 
     by their real parts if they are real,
-    otherwise by their imaginary part.
+    otherwise by their imaginary parts.
   
 Formulas: 
 
@@ -49,7 +49,7 @@ Tags:
 - algebraic
 
 Data properties:
-  type: R
+  type: C
   complete: no
 
 Display properties:
