--- a/data/Series_expansions/Taylor_coefficients_of_completed_Riemann_zeta_function_at_2/collection.yaml
+++ b/data/Series_expansions/Taylor_coefficients_of_completed_Riemann_zeta_function_at_2/collection.yaml
@@ -18,7 +18,7 @@ Parameters:
 
   n:
     type: Z
-    constraints: $n \neq 0$
+    constraints: $n \geq 0$
   
 Comments:
   comment-Riemann-zeta-definition: >
