--- a/data/Series_expansions/Laurent_coefficients_of_logarithmic_derivative_of_Riemann_zeta_function_at_1/collection.yaml
+++ b/data/Series_expansions/Laurent_coefficients_of_logarithmic_derivative_of_Riemann_zeta_function_at_1/collection.yaml
@@ -6,7 +6,7 @@ Title: >
 
 Definition: >
   This list contains the coefficients of the Laurent series expansion
-  $\zeta'(s)/\zeta(s) = \sum_{n=-1}^\infty a_n (s-1)^n$.
+  $\zeta'(s)/\zeta(s) = - \sum_{n=-1}^\infty \eta_n (s-1)^n$.
   
 Parameters:
   n:
@@ -14,19 +14,16 @@ Parameters:
     constraints: $n \geq -1$
   
 Comments:
-  comment-eta_n: >
-    For $n\geq 0$, $-a_n$ is often denoted $\eta_n$ CITE{Cof04} CITE{Con09}.
-    
   comment-radius-of-convergence: >
     The radius of convergence of the expansion of $\zeta'(s)/\zeta(s)$
     at $s=1$ is $3$, due to the trivial zero of $\zeta(s)$ at $s=-2$.
     
 Formulas:
-  formula-a_0: >
-    $a_0 = \gamma$, where $\gamma=\gamma_0$ is the Euler-Mascheroni constant.
+  formula-eta_0: >
+    $\eta_0 = -\gamma$, where $\gamma=\gamma_0$ is the Euler-Mascheroni constant.
 
   formula-recurrence: >
-    $a_n = (-1)^n \frac{n+1}{n!}\gamma_n + \sum_{k=0}^{n-1} \frac{(-1)^{n-k}}{(n-k-1)!}a_k \gamma_{n-k-1}$
+    $\eta_n = -(-1)^n \frac{n+1}{n!}\gamma_n + \sum_{k=0}^{n-1} \frac{(-1)^{n-k-1}}{(n-k-1)!}\eta_k \gamma_{n-k-1}$
     for $n\geq 0$, where $\gamma_n$ are the Stieltjes constants. CITE{Cof04}
 
 Programs: 
@@ -71,6 +68,6 @@ Data properties:
   
 Display properties:
   number-header: >
-    $a_n$
+    $n$<sup>th</sup> coefficient
 
 Numbers: INPUT{numbers.yaml}
