--- a/data/Series_expansions/Laurent_coefficients_of_logarithmic_derivative_of_Riemann_zeta_function_at_1/collection.yaml
+++ b/data/Series_expansions/Laurent_coefficients_of_logarithmic_derivative_of_Riemann_zeta_function_at_1/collection.yaml
@@ -5,10 +5,17 @@ Title: >
   of the Riemann zeta function at 1
 
 Definition: >
-  This list contains the coefficients of the Laurent series expansion
+  This list contains the coefficients $\eta_n$ of the Laurent series expansion
   $\zeta'(s)/\zeta(s) = - \sum_{n=-1}^\infty \eta_n (s-1)^n$.
+  We additionally list $\eta_n/n$, 
+  the coefficients in CITE{formula-log-zeta-1}.
   
 Parameters:
+  expression:
+    title: Transformation of constant
+    type: Symbolic
+    show-in-parameter-list: no
+
   n:
     type: Z
     constraints: $n \geq -1$
@@ -23,8 +30,11 @@ Formulas:
     $\eta_0 = -\gamma$, where $\gamma=\gamma_0$ is the Euler-Mascheroni constant.
 
   formula-recurrence: >
-    $\eta_n = -(-1)^n \frac{n+1}{n!}\gamma_n + \sum_{k=0}^{n-1} \frac{(-1)^{n-k-1}}{(n-k-1)!}\eta_k \gamma_{n-k-1}$
+    $\eta_n = -(-1)^n \frac{n+1}{n!}\gamma_n + \sum_{k=0}^{n-1} \frac{(-1)^{n-k}}{(n-k-1)!}\eta_k \gamma_{n-k-1}$
     for $n\geq 0$, where $\gamma_n$ are the Stieltjes constants. CITE{Cof04}
+
+  formula-log-zeta-1: >
+    $\log \zeta(s) = -\log(s-1) - \sum_{n=1}^\infty \frac{\eta_n}{n} (s-1)^n$.
 
 Programs: 
 
