--- a/data/Series_expansions/Laurent_coefficients_of_logarithmic_derivative_of_completed_Riemann_zeta_function_at_1/collection.yaml
+++ b/data/Series_expansions/Laurent_coefficients_of_logarithmic_derivative_of_completed_Riemann_zeta_function_at_1/collection.yaml
@@ -42,8 +42,9 @@ Formulas:
     $\lambda_n = - \sum_{k=1}^n (-1)^k \binom{n}{k} \sigma_k$. CITE{Cof05}
 
   formula-zeta-zero-moments: >
-    $\sigma_n = \sum_\rho \rho^{-n}$ where the sum is over
-    the non-tirival zeros of $\zeta(s)$. CITE{Leh88}
+    For $n\geq 2$, 
+    $\sigma_n = \sum_\rho \rho^{-n}$,
+    where the sum is over the non-tirival zeros of $\zeta(s)$. CITE{Leh88}
 
 Programs: 
 
