renamed "collection" to "table"
This also changes id's of tables from C[0-9]+ to T[0-9]+, that is, they start now with 'T' instead of 'C'.

--- a/data/Local_extrema/Local_extrema_of_Bessel_Y_functions/table.yaml
+++ b/data/Local_extrema/Local_extrema_of_Bessel_Y_functions/table.yaml
@@ -17,7 +17,7 @@ Parameters:
    
 Comments:
   comment-choice-of-alpha: >
-    This collection currently restricts to the important special case 
+    This table currently restricts to the important special case 
     $\alpha \in \frac{1}{2}\mathbb{Z}_{\geq 0}$.
   comment-maxima: >
     Local maxima arise for odd $n$, local minima for even $n$.  
