--- a/data/Combinatorics/Bernoulli_numbers/table.yaml
+++ b/data/Combinatorics/Bernoulli_numbers/table.yaml
@@ -30,7 +30,7 @@ Programs:
   program-sage:
     language: Sage
     code: |
-      numbers = [bernoulli(n) for n in range(1..10)]
+      numbers = [bernoulli(n) for n in [1..10]]
 
 References:
 
