--- a/data/Basic_constants/Meissel_Mertens_constant/table.yaml
+++ b/data/Basic_constants/Meissel_Mertens_constant/table.yaml
@@ -9,7 +9,7 @@ Definition: >
 Parameters:
 
 Comments:
-  Also known as Mertens constant, Kronecker's constant, Hadamard-de la Vall{'e}e-Poussin constant or the prime reciprocal constant.
+  Also known as Mertens constant, Kronecker's constant, Hadamard-de la Vall{\'e}e-Poussin constant or the prime reciprocal constant.
 
 Formulas: 
   formula-series: >
