--- a/data/P_adic_numbers/P_adic_logarithm_at_integers/table.yaml
+++ b/data/P_adic_numbers/P_adic_logarithm_at_integers/table.yaml
@@ -4,7 +4,7 @@ Title: >
   $p$-adic logarithm of integers
 
 Definition: >
-  This table constains $p$-adic logarithms 
+  This table contains $p$-adic logarithms 
   $\log_p(k) \in \mathbb{Z}_p$ of certain integers $k$.
 
 Parameters:
