--- a/data/Algebra/Orders_of_sporadic_finite_simple_groups/table.yaml
+++ b/data/Algebra/Orders_of_sporadic_finite_simple_groups/table.yaml
@@ -35,7 +35,7 @@ Tags:
 Data properties:
   type: Z
   sources:
-  - [Wiki]
+  - HREF{Wiki}
   reliability: >
     Finite simple groups have been completely classified.
   complete: yes
@@ -45,106 +45,106 @@ Display properties:
 
 Numbers:
   M11:
-    param-latex: $M_{11}$
+    param-latex: $\rm{M}_{11}$
     number: 7920
     comment: Mathieu group
   M12:
-    param-latex: $M_{12}$
+    param-latex: $\rm{M}_{12}$
     number: 95040
     comment: Mathieu group
   M22:
-    param-latex: $M_{22}$
+    param-latex: $\rm{M}_{22}$
     number: 443520
     comment: Mathieu group
   M23:
-    param-latex: $M_{23}$
+    param-latex: $\rm{M}_{23}$
     number: 10200960
     comment: Mathieu group
   M24:
-    param-latex: $M_{24}$
+    param-latex: $\rm{M}_{24}$
     number: 244823040
     comment: Mathieu group
   J1:
-    param-latex: $J_{1}$
+    param-latex: $\rm{J}_{1}$
     number: 175560
     comment: Janko group
   J2:
-    param-latex: $J_{2}$
+    param-latex: $\rm{J}_{2}$
     number: 604800
     comment: Janko group
   J3:
-    param-latex: $J_{3}$
+    param-latex: $\rm{J}_{3}$
     number: 50232960
     comment: Janko group
   J4:
-    param-latex: $J_{4}$
+    param-latex: $\rm{J}_{4}$
     number: 86775571046077562880
     comment: Janko group
   Co3:
-    param-latex: $Co_{3}$
+    param-latex: $\rm{Co}_{3}$
     number: 495766656000
     comment: Conway group
   Co2:
-    param-latex: $Co_{2}$
+    param-latex: $\rm{Co}_{2}$
     number: 42305421312000
     comment: Conway group
   Co1:
-    param-latex: $Co_{1}$
+    param-latex: $\rm{Co}_{1}$
     number: 4157776806543360000
     comment: Conway group
   Fi22:
-    param-latex: $Fi_{22}$
+    param-latex: $\rm{Fi}_{22}$
     number: 64561751654400
     comment: Fisher group
   Fi23:
-    param-latex: $Fi_{23}$
+    param-latex: $\rm{Fi}_{23}$
     number: 4089470473293004800
     comment: Fisher group
   Fi24:
-    param-latex: $Fi_{24}$
+    param-latex: $\rm{Fi}_{24}$
     number: 1255205709190661721292800
     comment: Fisher group
   HS:
-    param-latex: $HS$
+    param-latex: $\rm{HS}$
     number: 44352000
     comment: Higman-Sims group
   McL:
-    param-latex: $McL$
+    param-latex: $\rm{McL}$
     number: 898128000
     comment: McLaughlin group
   He:
-    param-latex: $He$
+    param-latex: $\rm{He}$
     number: 4030387200
     comment: Held group
   Ru:
-    param-latex: $Ru$
+    param-latex: $\rm{Ru}$
     number: 145926144000
     comment: Rudvalis group
   Suz:
-    param-latex: $Suz$
+    param-latex: $\rm{Suz}$
     number: 448345497600
     comment: Suzuki sporadic group
   ON:
-    param-latex: $O'N$
+    param-latex: $\rm{O'N}$
     number: 460815505920
     comment: O'Nan group
   HN:
-    param-latex: $HN$
+    param-latex: $\rm{HN}$
     number: 273030912000000
     comment: Harada-Norton group
   Ly:
-    param-latex: $Ly$
+    param-latex: $\rm{Ly}$
     number: 51765179004000000
     comment: Lyons group
   Th:
-    param-latex: $Th$
+    param-latex: $\rm{Th}$
     number: 90745943887872000
     comment: Thompson group
   B:
-    param-latex: $B$
+    param-latex: $\rm{B}$
     number: 4154781481226426191177580544000000
     comment: Baby Monster group
   M:
-    param-latex: $M$
+    param-latex: $\rm{M}$
     number: 808017424794512875886459904961710757005754368000000000    
     comment: Monster group
