removed . in title

--- a/data/Series_expansions/Q-expansion_of_the_Eisenstein_series_E4/table.yaml
+++ b/data/Series_expansions/Q-expansion_of_the_Eisenstein_series_E4/table.yaml
@@ -1,7 +1,7 @@
 ID: INPUT{id.yaml}
 
 Title: >
-  $q$-expansion of the Eisenstein series $E_4$.
+  $q$-expansion of the Eisenstein series $E_4$
 
 Definition: >
   This list contains the coefficients of the 
