removed . in title

--- a/data/Series_expansions/Q-expansion_of_the_Eisenstein_series_E6/table.yaml
+++ b/data/Series_expansions/Q-expansion_of_the_Eisenstein_series_E6/table.yaml
@@ -1,7 +1,7 @@
 ID: INPUT{id.yaml}
 
 Title: >
-  $q$-expansion of the Eisenstein series $E_6$.
+  $q$-expansion of the Eisenstein series $E_6$
 
 Definition: >
   This list contains the coefficients of the 
