changed O to \mathcal{O}

--- a/data/Number_theory/Rational_singular_moduli/table.yaml
+++ b/data/Number_theory/Rational_singular_moduli/table.yaml
@@ -18,7 +18,8 @@ Parameters:
 Comments:
   comment-discriminant: >
     $\Delta$ is the associated discriminant of the 
-    complex multiplication order $O = \text{End}\langle\tau,1\rangle$.
+    complex multiplication order 
+    $\mathcal{O} = \text{End}\langle\tau,1\rangle$.
         
 Formulas:
 
