added missing parameter for the variable

--- a/data/Number_theory/Large_Szpiro-ratios_of_elliptic_curves_over_Q/table.yaml
+++ b/data/Number_theory/Large_Szpiro-ratios_of_elliptic_curves_over_Q/table.yaml
@@ -15,6 +15,11 @@ Parameters:
     display: $\sigma'$
     title: Szpiro ratio (rounded)
     type: R
+  variable:
+    display: 
+    title: variable
+    type: Symbolic
+    show-in-parameter-list: no
    
 Comments:
   comment-Szpiro-conjecture: >
