--- a/data/Number_theory/Number_of_elliptic_curves_over_Q_with_good_reduction_outside_S/table.yaml
+++ b/data/Number_theory/Number_of_elliptic_curves_over_Q_with_good_reduction_outside_S/table.yaml
@@ -32,7 +32,7 @@ Comments:
     $n=2$ by Coghlan CITE{Cog} and Stephens CITE{Ste},
     $n=3,4,5$ by von Känel and Matschke CITE{vKanMat} and 
     Bennett, Gherga and Rechnitzer CITE{BeGhRe},
-    $n=6$ heuristically by Best and matschke CITE{BesMat},
+    $n=6$ heuristically by Best and Matschke CITE{BesMat},
     $n=7,8,9^*$ by Matschke CITE{M-ECDB} ($n=9$ assumes GRH).
     
 Formulas: 
