--- a/data/Number_theory/Number_of_p-smooth_abc_triples/table.yaml
+++ b/data/Number_theory/Number_of_p-smooth_abc_triples/table.yaml
@@ -32,7 +32,8 @@ Comments:
 Formulas:
   formula-number-mod-symmetry: >
     We can mod out a symmetry by requiring $0 < a \leq b < c$.
-    If $n'(p)$ denotes the number of such constrained $p$-smooth,
+    If $n'(p)$ denotes the number of such 
+    constrained $p$-smooth $abc$-triples,
     then $n(p) = 6n'(p) - 3$. 
     This is due to a $6$-fold symmetry 
     (by the anharmonic group CITE{WikiAnharmonicGroup}, 
