--- a/data/Number_theory/Highest_known_rank_of_elliptic_curves_over_Q_with_given_torsion/table.yaml
+++ b/data/Number_theory/Highest_known_rank_of_elliptic_curves_over_Q_with_given_torsion/table.yaml
@@ -13,7 +13,7 @@ Definition: >
   
 Parameters:
   T:
-    title: torsion subgroup of $E$
+    title: torsion subgroup of $E(\mathbb{Q})$
     type: Symbolic
    
 Comments:
