--- a/data/Algebra/Orders_of_sporadic_finite_simple_groups/table.yaml
+++ b/data/Algebra/Orders_of_sporadic_finite_simple_groups/table.yaml
@@ -35,7 +35,7 @@ Tags:
 Data properties:
   type: Z
   sources:
-  - HREF{Wiki}
+  - CITE{Wiki}
   reliability: >
     Finite simple groups have been completely classified.
   complete: yes
